--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
-index.file=index.php
-url=http://localhost/youtask/
+browser.id=Chrome
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
+remote.connection=admin_ftp-c5e375
+remote.directory=/public_html
+remote.upload=ON_SAVE
+run.as=LOCAL
+url=youtask
